--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -13,7 +13,7 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.2.0/boot1.js"></script>
 
-  
+  <script type="module" src="data/cartTest.js"></script>
 
 </head>
 
